# Tmp

./: CMakeLists.txt  CompilationNote.txt  DataStructure.cpp  DataStructure.h  ceres_adding.txt  export_inlier_matches.py  legacy.txt  main_calib.cpp  main_exp.cpp  main_human.cpp
Audio/: AudioPro.cpp  AudioPro.h  CMakeLists.txt
Drivers/: CMakeLists.txt  Drivers.cpp  Drivers.h
Geometry/: CMakeLists.txt  Geometry1.cpp  Geometry1.h  Geometry2.cpp  Geometry2.h
ImgPro/: CMakeLists.txt  ImagePro.cpp  ImagePro.h
Shader/: SimpleTransform.txt  simpleVertex.txt
TrackMatch/: CMakeLists.txt  FeatureEst.cpp  FeatureEst.h  MatchingTracking.cpp  MatchingTracking.h
Ulti/: CMakeLists.txt  DataIO.cpp  DataIO.h  GeneralUlti.cpp  GeneralUlti.h  MathUlti.cpp  MathUlti.h  MiscAlgo.cpp  MiscAlgo.h
Vis/: CMakeLists.txt  Visualization.cpp  Visualization.h  simpleFrag.txt
smpl/: GMM_covar_0.txt  GMM_covar_1.txt  GMM_covar_2.txt  GMM_covar_3.txt  GMM_covar_4.txt  GMM_covar_5.txt  GMM_covar_6.txt  GMM_covar_7.txt  GMM_mu.txt  GMM_w.txt  Mosh_dV_mu.txt  Mosh_pose_MinMax.txt  Mosh_pose_mu.txt  SMPL_2_UVID_UV_PID.txt  SMPL_2_UV_PID.txt  Untitled.m  Untitled2.m  Untitled3.m  Vconnections.txt  drawCoCoSkeleton.m  partId.txt  restJoints.txt  restJointsCOCO.txt  smpl_cmu_align2.mat  smpl_kinect_align.mat  smpl_pose_prior.mat  std_smpl_J.txt
